--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prisma:generate": "npx prisma generate",
+    "prisma:bd": "npx prisma bd push",
+    "prisma:studio": "npx prisma studio"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
