--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "prisma:generate": "npx prisma generate",
+    "prisma:migrate": "npx prisma migrate dev",
     "prisma:bd": "npx prisma bd push",
     "prisma:studio": "npx prisma studio"
   },
