--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint",
     "prisma:generate": "npx prisma generate",
     "prisma:migrate": "npx prisma migrate dev",
-    "prisma:bd": "npx prisma bd push",
-    "prisma:studio": "npx prisma studio"
+    "prisma:db": "npx prisma db push",
+    "prisma:studio": "npx prisma studio",
+    "prisma:seed": "ts-node prisma/seed.ts",
+    "prisma:deploy": "npx prisma migrate deploy"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
@@ -41,11 +43,12 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
+    "@types/node": "^20.19.1",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "prisma": "^6.4.1",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
   }
 }
