--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "prisma:seed": "ts-node prisma/seed.ts",
     "prisma:deploy": "npx prisma migrate deploy"
   },
+  "prisma": {
+    "seed": "ts-node prisma/seed.js"
+  },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
